Update test comments and README